--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 ---
 name: AntiExplosions
-version: 1.0.1
+version: 1.0.2+dev
 main: NhanAZ\AntiExplosions\Main
-api: 4.0.0
+api: 5.0.0
 src-namespace-prefix: NhanAZ\AntiExplosions
 
 website: https://github.com/NhanAZ
