--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 ---
 name: AntiExplosions
-version: 1.0.2+dev
+version: 1.0.2
 main: NhanAZ\AntiExplosions\Main
 api: 5.0.0
 src-namespace-prefix: NhanAZ\AntiExplosions
